# paroli-daemon

./: CMakeLists.txt  README.md
paroli-daemon/: OggOpusEncoder.cpp  OggOpusEncoder.hpp  main.cpp  paroli_daemon.cpp  paroli_daemon.hpp
piper/: pch.hpp
